--- a/wings2/src/res/org/wings/plaf/css/msie.css
+++ b/wings2/src/res/org/wings/plaf/css/msie.css
@@ -62,30 +62,30 @@ table.SForm {
     width: 100%;
 }
 
-/* Flowlayouts can't handle the 100% width of their children, so we try to set
-   their width to 1%. This leads to many rules, but is easily implementable. */
-table.SFlowLayout table.SForm {
-    width: 1%;
-}
-table.SFlowLayout table.SLayout table.SForm,
-table.SFlowLayout table.SFlowLayout table.SLayout table.SForm,
-table.SFlowLayout table.SFlowLayout table.SFlowLayout table.SLayout table.SForm,
-table.SFlowLayout table.SFlowLayout table.SFlowLayouttable.SFlowLayout table.SLayout table.SForm,
-table.SFlowLayout table.SFlowLayout table.SFlowLayout table.SFlowLayout table.SFlowLayout table.SLayout table.SForm,
-table.SFlowLayout table.SFlowLayout table.SFlowLayout table.SFlowLayout table.SFlowLayout table.SFlowLayout table.SLayout table.SForm {
-    width: 100%;
-}
+/* SFlowLayout can't flow if the immediate inner children has defined 100% width.
+   Some wingS component inheritly define 100% width i.e. like SForm.
+   We overwrite their width in this case to 1%. This leads to many rules, but is easily implementable. */
+div.SFlowLayout table.SForm,
 table.SFlowLayout table.SFlowLayout table.SForm,
 table.SFlowLayout table.SFlowLayout table.SFlowLayout table.SForm,
 table.SFlowLayout table.SFlowLayout table.SFlowLayout table.SFlowLayout table.SForm,
 table.SFlowLayout table.SFlowLayout table.SFlowLayout table.SFlowLayout table.SFlowLayout table.SForm,
 table.SFlowLayout table.SFlowLayout table.SFlowLayout table.SFlowLayout table.SFlowLayout table.SFlowLayout table.SForm,
-table.SFlowLayout table.SFlowLayout table.SFlowLayout table.SFlowLayout table.SFlowLayout table.SFlowLayout table.SFlowLayout table.SForm {
-	width: 1%
+table.SFlowLayout table.SFlowLayout table.SFlowLayout table.SFlowLayout table.SFlowLayout table.SFlowLayout table.SFlowLayout table.SForm
+{
+    width: 1%;
+}
+/* Counterpart: If a table layout is in between --> reverse patch. */
+table.SFlowLayout table.SLayout table.SForm,
+table.SFlowLayout table.SFlowLayout table.SLayout table.SForm,
+table.SFlowLayout table.SFlowLayout table.SFlowLayout table.SLayout table.SForm,
+table.SFlowLayout table.SFlowLayout table.SFlowLayouttable.SFlowLayout table.SLayout table.SForm,
+table.SFlowLayout table.SFlowLayout table.SFlowLayout table.SFlowLayout table.SFlowLayout table.SLayout table.SForm,
+table.SFlowLayout table.SFlowLayout table.SFlowLayout table.SFlowLayout table.SFlowLayout table.SFlowLayout table.SLayout table.SForm
+{
+    width: 100%;
 }
 
-
-/* TODO -- move this too renderer? */
 IMG {
     border: none !important;     /* This is needed to avoid those ugly borders around linked imgs's */
 }
